...
                                                                    <nil key="highlightedColor"/>
                                                                </label>
                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Home" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fLP-Z8-f8l">
                                                                    <rect key="frame" x="0.0" y="20.5" width="193" height="18"/>
                                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
...
                                                            </subviews>
                                                        </stackView>
                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="29.01.1998" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nYz-RW-5ZQ">
                                                            <rect key="frame" x="193" y="13" width="135" height="18"/>
                                                            <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Call Mom" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="QPT-Z0-iYR">
                                                <rect key="frame" x="98" y="0.0" width="237" height="30"/>
                                                <nil key="textColor"/>
...
                                        <rect key="frame" x="0.0" y="120" width="335" height="30"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Adress" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jyg-Kp-u0A">
                                                <rect key="frame" x="0.0" y="0.0" width="98" height="30"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Lorem Ipsum" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ct5-bQ-3VD">
                                                <rect key="frame" x="98" y="0.0" width="237" height="30"/>
                                                <nil key="textColor"/>
...
                                        <rect key="frame" x="175" y="0.0" width="160" height="30"/>
                                        <color key="backgroundColor" red="0.55634254220000001" green="0.97934550050000002" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <state key="normal" title="Save">
                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
...
